go back to only avoiding icon flicker for tags list

--- a/css/main.css
+++ b/css/main.css
@@ -110,11 +110,6 @@ img {
   margin-top: -25px;
 }
 
-i.fa {
-  display: inline-block;
-  width: 1.2em;
-}
-
 /* --- Navbar --- */
 
 a.nav-twitter {
